--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,6 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
-    "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "graphql": "^16.8.0",
@@ -30,7 +29,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^27.5.2"
+    "@types/jest": "^27.5.2",
+    "@types/node": "^24.3.1",
+    "identity-obj-proxy": "^3.0.0",
+    "ts-jest": "^29.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
